--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 
     <link rel="stylesheet" href="style.css" />
 
@@ -18,7 +13,7 @@
   <body>
     <div class="container">
       <figure>
-        <img src="/images/avatar-jessica.jpeg" alt="avatar" />
+        <img src="/avatar-jessica.jpeg" alt="avatar" />
       </figure>
       <h1 class="title">Jessica Randall</h1>
       <p class="place">London, United Kingdom</p>
